logs/Slang/generated/yosys/asicworld_code_hdl_models_d_ff_gates.sv.log
name: asicworld_code_hdl_models_d_ff_gates
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:9:1: error: expected member
not (n1,d);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:11:1: error: expected member
nand (n2,d,clk);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:12:1: error: expected member
nand (n3,n1,clk);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:14:1: error: expected member
nand (dn,q_bar_n,n2);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:15:1: error: expected member
nand (q_bar_n,dn,n3);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:18:1: error: expected member
not (cn,clk);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:20:1: error: expected member
not (n4,dn);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:22:1: error: expected member
nand (n5,dn,cn);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:23:1: error: expected member
nand (n6,n4,cn);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:25:1: error: expected member
nand (q,q_bar,n5);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_d_ff_gates.v:26:1: error: expected member
nand (q_bar,q,n6);
^~~~
